--- a/SchoolProject/Views/Donations/Create.cshtml
+++ b/SchoolProject/Views/Donations/Create.cshtml
@@ -15,7 +15,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Medicine" class="control-label"></label>
-                <input asp-for="Medicine.Id" class="form-control" type="hidden"/>
+                <input asp-for="Medicine" class="form-control" hidden/>
                 <input asp-for="Medicine.Name" class="form-control" />
                 <span asp-validation-for="Medicine" class="text-danger"></span>
             </div>
