--- a/SchoolProject/Views/Roles/Create.cshtml
+++ b/SchoolProject/Views/Roles/Create.cshtml
@@ -1,11 +1,11 @@
-﻿@model SchoolProject.Models.UserRoles  
+﻿@model SchoolProject.ViewModels.UserRoles;
 
 @{
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h4>Roles</h4>
+<h1>User Role</h1>
 
 <h4>Create</h4>
 <hr />
