--- a/SchoolProject/Views/_ViewImports.cshtml
+++ b/SchoolProject/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using SchoolProject
 @using SchoolProject.Models
+@using SchoolProject.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
