--- a/SchoolProject/Views/Donations/DonatedMedicines.cshtml
+++ b/SchoolProject/Views/Donations/DonatedMedicines.cshtml
@@ -6,103 +6,112 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Request</h1>
+<h1>Request Medicine</h1>
+<div class="d-flex justify-content-end">
+    <form class="form-inline my-2 my-lg-0" method="get" asp-action="Search">
+        <input class="form-control mr-sm-2" type="search" name="q" placeholder="Search" aria-label="Search" />
+        <input name="page" type="hidden" value="DonatedMedicines" />
+        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+    </form>
+</div>
 
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Medicine.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Medicine.GenericName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Medicine.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Medicine.Mg)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Quantity)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.QuantityRemaining)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Medicine.ExpiryDate)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            if (DateTime.Compare(DateTime.Now, item.Medicine.ExpiryDate) < 0)
+<div class="mt-4">
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Medicine.Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Medicine.GenericName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Medicine.Description)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Medicine.Mg)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Quantity)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.QuantityRemaining)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Medicine.ExpiryDate)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
             {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Medicine.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Medicine.GenericName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Medicine.Mg)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Medicine.Description)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Quantity)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.QuantityRemaining)
-                    </td>
-                    <td>
-                        @{
-                            string expiryDate = item.Medicine.ExpiryDate.ToString("MMM/yyyy");
-                        }
-                        @Html.DisplayFor(modelItem => expiryDate)
-                    </td>
-                    <td>
-                        <a class="btn btn-info" asp-action="Create" asp-controller="Requests" asp-route-id="@item.Id">Request</a>
-                    </td>
-                </tr>
+                if (DateTime.Compare(DateTime.Now, item.Medicine.ExpiryDate) < 0)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Medicine.Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Medicine.GenericName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Medicine.Description)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Medicine.Mg)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Quantity)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.QuantityRemaining)
+                        </td>
+                        <td>
+                            @{
+                                string expiryDate = item.Medicine.ExpiryDate.ToString("MMM/yyyy");
+                            }
+                            @Html.DisplayFor(modelItem => expiryDate)
+                        </td>
+                        <td>
+                            <a class="btn btn-info btn-sm" asp-action="Create" asp-controller="Requests" asp-route-id="@item.Id">Request</a>
+                        </td>
+                    </tr>
+                }
+                else
+                {
+                    <tr class="table-danger">
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Medicine.Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Medicine.GenericName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Medicine.Description)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Medicine.Mg)
+                        </td>
+                        <td>
+                            @{
+                                string expiryDate = item.Medicine.ExpiryDate.ToString("MMM/yyyy");
+                            }
+                            @Html.DisplayFor(modelItem => expiryDate)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Quantity)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.QuantityRemaining)
+                        </td>
+                        <td class="text-danger">
+                            Expired
+                        </td>
+                    </tr>
+                }
             }
-            else
-            {
-                <tr class="table-danger">
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Medicine.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Medicine.GenericName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Medicine.Mg)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Medicine.Description)
-                    </td>
-                    <td>
-                        @{
-                            string expiryDate = item.Medicine.ExpiryDate.ToString("MMM/yyyy");
-                        }
-                        @Html.DisplayFor(modelItem => expiryDate)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Quantity)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.QuantityRemaining)
-                    </td>
-                    <td class="text-danger">
-                        Expired
-                    </td>
-                </tr>
-            }
-         }
-    </tbody>
-</table>
+        </tbody>
+    </table>
+</div>
 
