--- a/SchoolProject/Views/Donations/MyDonations.cshtml
+++ b/SchoolProject/Views/Donations/MyDonations.cshtml
@@ -10,102 +10,57 @@
 
 @if (!Model.Any())
 {
-    <h2>Ops! Looks like you havent donated any medicines yet.</h2>
-    <a asp-action="Create" class="btn btn-primary" asp-controller="Medicines">Donate</a>
+    @if (User.IsInRole("Ngo"))
+    {
+        <h2>Ops! Looks like you havent receivedany medicines donations yet.</h2>
+    }
+    else
+    {
+        <h2>Ops! Looks like you havent donated any medicines yet.</h2>
+        <a asp-action="Create" class="btn btn-primary" asp-controller="Medicines">Donate</a>
+    }
 }
 else
 {
-    <a asp-action="Create" class="btn btn-primary"  asp-controller="Medicines">Create</a>
-
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Medicine.Name)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Medicine.GenericName)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Medicine.Description)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Medicine.Mg)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Quantity)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.QuantityRemaining)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Medicine.ExpiryDate)
-                </th>
-            </tr>
-        </thead>
-        <tbody>
+    <div class="row mt-2">
+        <div class="col-sm-8">
+            <a asp-action="Create" class="btn btn-primary" asp-controller="Medicines">Create</a>
+        </div>
+        <div class="col-sm-4">
+            <form class="form-inline my-2 my-lg-0" method="get" asp-action="Search">
+                <input class="form-control mr-sm-2 w-75" type="search" name="q" placeholder="Search" aria-label="Search" />
+                <input name="page" type="hidden" value="MyDonations" />
+                <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        </div>
+    </div>
+    <div class="container mt-4">
+        <div class="row">
             @foreach (var item in Model)
             {
-                if (DateTime.Compare(DateTime.Now, item.Medicine.ExpiryDate) < 0)
-                {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Medicine.Name)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Medicine.GenericName)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Medicine.Mg)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Medicine.Description)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Quantity)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.QuantityRemaining)
-                        </td>
-                        <td>
-                            @{
-                                string expiryDate = item.Medicine.ExpiryDate.ToString("MMM/yyyy");
+                <div class="col-auto mb-3">
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 asp-for="" class="card-title">@item.Medicine.Name</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">@item.Medicine.GenericName</h6>
+                            <p class="card-text">@item.Medicine.Description</p>
+                            <a asp-action="Details" class="btn btn-primary btn-sm" asp-route-id="@item.Id">Details</a>
+                            @if (DateTime.Compare(DateTime.Now, item.Medicine.ExpiryDate) <= 0)
+                            {
+                                if (User.IsInRole("Ngo"))
+                                {
+                                    <a asp-action="Edit" class="btn btn-primary btn-sm" asp-route-id="@item.Id">Edit</a>
+                                }
                             }
-                            @Html.DisplayFor(modelItem => expiryDate)
-                        </td>
-                    </tr>
-                }
-                else
-                {
-                    <tr class="table-danger">
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Medicine.Name)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Medicine.GenericName)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Medicine.Mg)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Medicine.Description)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Quantity)
-                        </td>
-                        <td>
-                            @Html.DisplayNameFor(modelItem => item.QuantityRemaining)
-                        </td>
-                        <td>
-                            @{
-                                string expiryDate = item.Medicine.ExpiryDate.ToString("MMM/yyyy");
+                            else
+                            {
+                                <h6 class="bg-danger rounded mt-1 p-2 text-center">Expired</h6>
                             }
-                            @Html.DisplayFor(modelItem => expiryDate)
-                        </td>
-                    </tr>
-                }
-             }
-        </tbody>
-    </table>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
 }
 
