--- a/SchoolProject/Views/Medicines/Details.cshtml
+++ b/SchoolProject/Views/Medicines/Details.cshtml
@@ -1,5 +1,5 @@
-﻿@model SchoolProject.Models.Medicine 
- 
+﻿@model SchoolProject.Models.Medicine
+
 @{
     ViewData["Title"] = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -43,7 +43,8 @@
         </dd>
     </dl>
 </div>
-@if (User.IsInRole("Admin")) { 
+@if (User.IsInRole("Admin"))
+{
     <div>
         <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
         <a asp-action="Index">Back to List</a>
