--- a/SchoolProject/Views/Medicines/Index.cshtml
+++ b/SchoolProject/Views/Medicines/Index.cshtml
@@ -7,94 +7,102 @@
 
 <h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.GenericName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Mg)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ExpiryDate)
-            </th>
-            <th></th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-    @foreach (var item in Model)
-    {
-        if (DateTime.Compare(DateTime.Now, item.ExpiryDate) < 0)
-        {
+<div class="row mt-2">
+    <div class="col-sm-8">
+        <a asp-action="Create" class="btn btn-primary" asp-controller="Medicines">Create</a>
+    </div>
+    <div class="col-sm-4">
+        <form class="form-inline my-2 my-lg-0" method="get" asp-action="Search">
+            <input class="form-control mr-sm-2" type="search" name="q" placeholder="Search" aria-label="Search" />
+            <input name="page" type="hidden" value="Index" />
+            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+        </form>
+    </div>
+</div>
+<div class="mt-4">
+    <table class="table table-hover">
+        <thead>
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.GenericName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Mg)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Description)
-                </td>
-                <td>
-                    @{
-                        string expiryDate = item.ExpiryDate.ToString("MMM/yyyy");
-                    }
-                    @Html.DisplayFor(modelItem => expiryDate)
-                </td>
-                <td>
-                    <a class="btn btn-info" asp-action="Create" asp-controller="Requests" asp-route-id="@item.Id">Request</a>
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                </td>
+                <th></th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.GenericName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Description)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Mg)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.ExpiryDate)
+                </th>
+                <th></th>
             </tr>
-        }
-        else {
-            <tr class="table-danger">
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.GenericName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Mg)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Description)
-                </td>
-                <td>
-                    @{
-                        string expiryDate = item.ExpiryDate.ToString("MMM/yyyy");
-                    }
-                    @Html.DisplayFor(modelItem => expiryDate)
-                </td>
-                <td class="text-danger">
-                    Expired
-                </td>
-                <td>
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                </td>
-            </tr>
-        }
-    }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                if (DateTime.Compare(DateTime.Now, item.ExpiryDate) <= 0)
+                {
+                    <tr>
+                        <td></td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.GenericName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Mg)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Description)
+                        </td>
+                        <td>
+                            @{
+                                string expiryDate = item.ExpiryDate.ToString("MMM/yyyy");
+                            }
+                            @Html.DisplayFor(modelItem => expiryDate)
+                        </td>
+                        <td>
+                            <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                            <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                            <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        </td>
+                    </tr>
+                }
+                else
+                {
+                    <tr class="table-danger">
+                        <td class="text-danger font-weight-bold">Expired</td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.GenericName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Mg)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Description)
+                        </td>
+                        <td>
+                            @{
+                                string expiryDate = item.ExpiryDate.ToString("MMM/yyyy");
+                            }
+                            @Html.DisplayFor(modelItem => expiryDate)
+                        </td>
+                        <td>
+                            <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                            <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        </td>
+                    </tr>
+                }
+            }
+        </tbody>
+    </table>
+</div>
