--- a/SchoolProject/Views/Shared/_Layout.cshtml
+++ b/SchoolProject/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link href="~/css/invoice.css" rel="stylesheet" />
+    <!--For chart.js-->
+    <script src="~/js/dist/chart.js"></script>
 </head>
 <body>
     <header>
@@ -28,11 +30,18 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Donations" asp-action="DonatedMedicines">Request</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Donations" asp-action="MyDonations">My Donations</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Requests" asp-action="MyRequests">MyRequests</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
+        
     </header>
     <div class="container">
         <main role="main" class="pb-3">
