Added Complaint and Notification

--- a/SchoolProject/Views/Requests/Index.cshtml
+++ b/SchoolProject/Views/Requests/Index.cshtml
@@ -7,10 +7,7 @@
 
 <h1>Index</h1>
 
-<div class="row mt-2">
-    <div class="col-sm-8">
-        <a asp-action="Create" class="btn btn-primary" asp-controller="Medicines">Create</a>
-    </div>
+<div class="row mt-2 d-flex flex-row-reverse">
     <div class="col-sm-4">
         <form class="form-inline my-2 my-lg-0" method="get" asp-action="Search">
             <input class="form-control mr-sm-2" type="search" name="q" placeholder="Search" aria-label="Search" />
