--- a/SchoolProject/Views/Donations/DonatedMedicines.cshtml
+++ b/SchoolProject/Views/Donations/DonatedMedicines.cshtml
@@ -16,7 +16,7 @@
 </div>
 
 <div class="mt-4">
-    <table class="table table-striped">
+    <table class="table table-striped text-center">
         <thead>
             <tr>
                 <th>
@@ -30,9 +30,6 @@
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.Medicine.Mg)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Quantity)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.QuantityRemaining)
@@ -60,9 +57,6 @@
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.Medicine.Mg)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Quantity)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.QuantityRemaining)
@@ -98,9 +92,6 @@
                                 string expiryDate = item.Medicine.ExpiryDate.ToString("MMM/yyyy");
                             }
                             @Html.DisplayFor(modelItem => expiryDate)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Quantity)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.QuantityRemaining)
