--- a/SchoolProject/Views/Home/Analytics.cshtml
+++ b/SchoolProject/Views/Home/Analytics.cshtml
@@ -1,7 +1,83 @@
-﻿@{
-
+﻿
+@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewData["Title"] = "Analytics";
 }
 <div>
+    <div>
+        <h3 class="mt-4 text-center">Todays Transactions</h3>
+    </div>
+    <div class="row">
+        @if (ViewBag.TodaysDonations.Count > 0 && ViewBag.TodaysRequests.Count > 0)
+        {
+            <h5>No Transactions today</h5>
+        }
+        else
+        {
+            <div class="col">
+                @if (ViewBag.TodaysDonations.Count > 0)
+                {
+                    <h5 class="text-center">Donations</h5>
+                    <table class="table table-hover">
+                        <tr>
+                            <th>Medicine</th>
+                            <th>Donor</th>
+                            <th>Receiving Ngo</th>
+                            <th>Quantity</th>
+                            <th></th>
+                        </tr>
+                        @foreach (var item in ViewBag.TodaysDonations)
+                        {
+                            <tr>
+                                <td>@item.Medicine.Name</td>
+                                <td>@item.Donor.FirstName @item.Donor.LastName</td>
+                                <td>@item.ReceiverNgo.Name</td>
+                                <td>@item.Quantity</td>
+                                <td><a asp-action="Details" asp-controller="Donations" asp-route-id="@item.Id">Details</a></td>
+                            </tr>
+                        }
+                    </table>
+                }
+                else
+                {
+                
+                    <h5 class="text-center">No Donations Today</h5>
+                }
+            </div>
+
+            <div class="col text-center">
+            
+                @if (ViewBag.TodaysRequests.Count > 0)
+                {
+                    <h5>Requests</h5>
+                    <table class="table table-hover">
+                        <tr>
+                            <th>Medicine</th>
+                            <th>Requestor</th>
+                            <th>Donating Ngo</th>
+                            <th>Quantity</th>
+                            <th></th>
+                        </tr>
+                        @foreach (var item in ViewBag.TodaysRequests)
+                        {
+                            <tr>
+                                <td>@item.Medicine.Name</td>
+                                <td>@item.Requestor.FirstName @item.Requestor.LastName</td>
+                                <td>@item.RequestingNgo.Name</td>
+                                <td>@item.Quantity</td>
+                                <td><a asp-action="Details" asp-controller="Requests" asp-route-id="@item.Id">Details</a></td>
+                            </tr>
+                        }
+                    </table>
+                }
+                else
+                {
+                    <h5 class="text-center">No Requests Today</h5>
+                }
+            </div>
+        }
+    </div>
+    <hr />
     <div class="row">
         <div class="col mr-4">
             <div class="row mb-4">
@@ -191,82 +267,5 @@
                 </script>
             </div>
         </div>
-    </div>
-
-    <div>
-        <h3 class="mt-4 text-center">Todays Transactions</h3>
-    </div>
-    <div class="row">
-        @if (ViewBag.TodaysDonations.Count > 0 && ViewBag.TodaysRequests.Count > 0)
-        {
-            <div>
-                <h5>No Transactions today</h5>
-            </div>
-        }
-        else
-        {
-            @if (ViewBag.TodaysDonations.Count > 0)
-            {
-                <div class="col">
-                    <h5 class="text-center">Donations</h5>
-                    <table class="table table-hover">
-                        <tr>
-                            <th>Medicine</th>
-                            <th>Donor</th>
-                            <th>Receiving Ngo</th>
-                            <th>Quantity</th>
-                            <th></th>
-                        </tr>
-                        @foreach (var item in ViewBag.TodaysDonations)
-                        {
-                            <tr>
-                                <td>@item.Medicine.Name</td>
-                                <td>@item.Donor.FirstName @item.Donor.LastName</td>
-                                <td>@item.ReceiverNgo.Name</td>
-                                <td>@item.Quantity</td>
-                                <td><a asp-action="Details" asp-controller="Donations" asp-route-id="@item.Id">Details</a></td>
-                            </tr>
-                        }
-                    </table>
-                </div>
-            }
-            else
-            {
-                <div>
-                    <h5>No Donations Today</h5>
-                </div>
-            }
-            @if (ViewBag.TodaysRequests.Count > 0)
-            {
-                <div class="col text-center">
-                    <h5>Requests</h5>
-                    <table class="table table-hover">
-                        <tr>
-                            <th>Medicine</th>
-                            <th>Requestor</th>
-                            <th>Donating Ngo</th>
-                            <th>Quantity</th>
-                            <th></th>
-                        </tr>
-                        @foreach (var item in ViewBag.TodaysRequests)
-                        {
-                            <tr>
-                                <td>@item.Medicine.Name</td>
-                                <td>@item.Requestor.FirstName @item.Requestor.LastName</td>
-                                <td>@item.RequestingNgo.Name</td>
-                                <td>@item.Quantity</td>
-                                <td><a asp-action="Details" asp-controller="Requests" asp-route-id="@item.Id">Details</a></td>
-                            </tr>
-                        }
-                    </table>
-                </div>
-            }
-            else
-            {
-                <div>
-                    <h5>No Requests Today</h5>
-                </div>
-            }
-        }
     </div>
 </div>
