--- a/SchoolProject/Views/Requests/Details.cshtml
+++ b/SchoolProject/Views/Requests/Details.cshtml
@@ -11,15 +11,83 @@
     <h4>Request</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Medicine)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Medicine.Name)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Medicine.GenericName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Medicine.GenericName)
+        </dd>
+        @if (User.IsInRole("Ngo"))
+        {
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Requestor)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Requestor.FirstName) @Html.DisplayFor(model => model.Requestor.LastName)
+            </dd>
+        }
+        else if (User.IsInRole("Donor"))
+        {
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Requestor)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Requestor.FirstName) @Html.DisplayFor(model => model.Requestor.LastName)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.RequestingNgo)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.RequestingNgo.Name)
+            </dd>
+        }
+        else
+        {
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.RequestingNgo)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.RequestingNgo.Name)
+            </dd>
+        }
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.RequestDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.RequestDate)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Quantity)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Quantity)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Completed)
+        </dt>
+        <dd class="col-sm-10">
+            @{ var status = Model.Completed ? "Completed" : "Pending";}
+            @Html.DisplayFor(model => status)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    @if (!User.IsInRole("Ngo"))
+    {
+        <a asp-action="Edit" class="btn btn-primary btn-sm" asp-route-id="@Model.Id">Edit</a>
+    }
+    @if (User.IsInRole("Admin"))
+    {
+        <a class="btn btn-secondary btn-sm" asp-action="Index">Back to List</a>
+    }
+    else
+    {
+        <a class="btn btn-secondary btn-sm" asp-action="MyRequests">Back to List</a>
+    }
 </div>
