--- a/SchoolProject/Views/Shared/_Layout.cshtml
+++ b/SchoolProject/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                 </div>
             </div>
         </nav>
-        
+
     </header>
     <div class="container">
         <main role="main" class="pb-3">
@@ -47,6 +47,10 @@
             &copy; 2021 - SchoolProject - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+    <script>
+        //i know this is ugly
+        var userAuthorized = @User.Identity.IsAuthenticated.ToString().ToLower();
+    </script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
