--- a/SchoolProject/Views/Complaints/Delete.cshtml
+++ b/SchoolProject/Views/Complaints/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model SchoolProject.Models.Donation
+﻿@model SchoolProject.Models.Complaint
 
 @{
     ViewData["Title"] = "Delete";
@@ -9,32 +9,32 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Donation</h4>
+    <h4>Complaint</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Quantity)
+            @Html.DisplayNameFor(model => model.On)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Quantity)
+            @Html.DisplayFor(model => model.On)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DonationTime)
+            @Html.DisplayNameFor(model => model.UserComplaint)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DonationTime)
+            @Html.DisplayFor(model => model.UserComplaint)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Suggestion)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Suggestion)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        @if(User.IsInRole("Admin"))
-        {
-            <a asp-action="Index">Back to List</a>
-        }
-        else {
-            <a asp-action="MyDonations">Back to List</a>
-        }
+        <a asp-action="Index">Back to List</a>
     </form>
 </div>
