--- a/SchoolProject/wwwroot/css/site.css
+++ b/SchoolProject/wwwroot/css/site.css
@@ -69,5 +69,14 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
- 
 
+.dropdown-toggle::after {
+    border: none;
+}
+
+.very-small {
+    margin: 0;
+    padding: 0;
+    height: 0px;
+    width: 0px;
+}
