--- a/SchoolProject/Views/Requests/MyRequests.cshtml
+++ b/SchoolProject/Views/Requests/MyRequests.cshtml
@@ -23,12 +23,12 @@
 else
 {
     <div class="row">
-        @if (User.IsInRole("Donor"))
-        {
-            <div class="col">
-                <a asp-action="Create" class="btn btn-primary" asp-controller="Medicines">Create</a>
-            </div>
-        }
+        <div class="col">
+            @if (User.IsInRole("Donor")) { 
+                @*<a asp-action="Invoice" class="btn btn-primary btn-sm">Generate Invoice</a>*@
+                <a asp-action="DonatedMedicines" class="btn btn-primary btn-sm" asp-controller="Donations">New Request</a>
+            }
+        </div>
         <div class="col d-flex justify-content-end">
             <form class="form-inline my-2 my-lg-0" method="get" asp-action="Search">
                 <input class="form-control mr-sm-2" type="search" name="q" placeholder="Search" aria-label="Search" />
@@ -47,18 +47,31 @@ else
                             <h5 asp-for="" class="card-title">@item.Medicine.Name</h5>
                             <h6 class="card-subtitle mb-2 text-muted">@item.Medicine.GenericName</h6>
                             <p class="card-text">@item.Medicine.Description</p>
-                            <a asp-action="Details" class="btn btn-primary btn-sm" asp-route-id="@item.Id">Details</a>
-                            @if (DateTime.Compare(DateTime.Now, item.Medicine.ExpiryDate) <= 0)
+                            @if (User.IsInRole("Ngo"))
                             {
-                                if (User.IsInRole("Ngo"))
-                                {
-                                    <a asp-action="Edit" class="btn btn-primary btn-sm" asp-route-id="@item.Id">Edit</a>
-                                }
+                                <p class="card-text">Donor: @item.Requestor.FirstName @item.Requestor.LastName</p>
                             }
-                            else
+                            else if (User.IsInRole("Donor"))
                             {
-                                <h6 class="bg-danger rounded mt-1 p-2 text-center">Expired</h6>
+                                <p class="card-text">To: @item.RequestingNgo.Name</p>
                             }
+                            <p class="card-text">
+                                @Html.DisplayNameFor(modelItem => item.Completed):
+                            @{ var status = item.Completed ? "Completed" : "Pending";}
+                            @Html.DisplayFor(modelItem => status)
+                        </p>
+                        <a asp-action="Details" class="btn btn-primary btn-sm" asp-route-id="@item.Id">Details</a>
+                        @if (DateTime.Compare(DateTime.Now, item.Medicine.ExpiryDate) <= 0)
+                        {
+                            if (User.IsInRole("Ngo"))
+                            {
+                                <a asp-action="Edit" class="btn btn-primary btn-sm" asp-route-id="@item.Id">Edit</a>
+                            }
+                        }
+                        else
+                        {
+                            <h6 class="bg-danger rounded mt-1 p-2 text-center">Expired</h6>
+                        }
                         </div>
                     </div>
                 </div>
