--- a/SchoolProject/Views/Home/Analytics.cshtml
+++ b/SchoolProject/Views/Home/Analytics.cshtml
@@ -124,6 +124,33 @@
                             }
                         }
                     });
+                    function parseDataFromJson(data) {
+                        var obj = JSON.parse(data);
+                        var res = [];
+
+                        for (var i in obj)
+                            res.push(obj[i].count);
+                        return res;
+                    }
+
+                    function parseLabelsFromJson(data) {
+                        var obj = JSON.parse(data);
+                        var res = [];
+
+                        for (var i in obj)
+                            res.push(obj[i].name);
+                        return res;
+                    }
+
+                    function generateRandomColorForArray(len) {
+                        var colors = [];
+                        for (var i = 1; i <= len; i++) {
+                            var randomColor = '#' + Math.floor(Math.random() * 16777215).toString(16);
+                            colors.push(randomColor);
+                        }
+                        return colors;
+                        //random color will be freshly served
+                    }
                 </script>
             </div>
             <div class="row">
